--- a/prompt_paper/references.bib
+++ b/prompt_paper/references.bib
@@ -185,3 +185,38 @@
   journal={arXiv preprint arXiv:2303.08774},
   year={2023}
 }
+
+@book{efron1993bootstrap,
+  title={An Introduction to the Bootstrap},
+  author={Efron, Bradley and Tibshirani, Robert J.},
+  year={1993},
+  publisher={Chapman and Hall/CRC},
+  address={New York}
+}
+
+@article{hall1992bootstrap,
+  title={The Bootstrap and Edgeworth Expansion},
+  author={Hall, Peter},
+  year={1992},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{landis1977kappa,
+  title={The measurement of observer agreement for categorical data},
+  author={Landis, J. Richard and Koch, Gary G.},
+  journal={Biometrics},
+  volume={33},
+  number={1},
+  pages={159--174},
+  year={1977}
+}
+
+@article{fleiss1971kappa,
+  title={Measuring nominal scale agreement among many raters},
+  author={Fleiss, Joseph L.},
+  journal={Psychological Bulletin},
+  volume={76},
+  number={5},
+  pages={378--382},
+  year={1971}
+}
