fix(paper): Add missing bibliography entries and fix text overflow
LaTeX fixes:
- Added missing bibliography entries: efron1993bootstrap, hall1992bootstrap, landis1977kappa, fleiss1971kappa
- Fixed overfull hbox in audit case study (line 427)
- Fixed overfull hbox in repair transformations (line 597)
- Shortened long texttt strings to prevent overflow
- Added non-breaking spaces (~) to improve line breaking

All citations should now resolve correctly instead of showing ?
Text overflow issues resolved for better PDF rendering.

--- a/prompt_paper/prompt_contracts_paper.tex
+++ b/prompt_paper/prompt_contracts_paper.tex
@@ -183,7 +183,56 @@
   title={An Introduction to the Bootstrap},
   author={Efron, Bradley and Tibshirani, Robert J},
   year={1994},
-  publisher={Chapman and Hall/CRC}
+  publisher={Chapman and Hall/CRC},
+  address={New York}
+}
+
+@book{efron1993bootstrap,
+  title={An Introduction to the Bootstrap},
+  author={Efron, Bradley and Tibshirani, Robert J.},
+  year={1993},
+  publisher={Chapman and Hall/CRC},
+  address={New York}
+}
+
+@article{hall1992bootstrap,
+  title={The Bootstrap and Edgeworth Expansion},
+  author={Hall, Peter},
+  year={1992},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{landis1977kappa,
+  title={The measurement of observer agreement for categorical data},
+  author={Landis, J. Richard and Koch, Gary G.},
+  journal={Biometrics},
+  volume={33},
+  number={1},
+  pages={159--174},
+  year={1977},
+  publisher={Wiley}
+}
+
+@article{landis1977measurement,
+  title={The measurement of observer agreement for categorical data},
+  author={Landis, J. Richard and Koch, Gary G.},
+  journal={Biometrics},
+  volume={33},
+  number={1},
+  pages={159--174},
+  year={1977},
+  publisher={Wiley}
+}
+
+@article{fleiss1971kappa,
+  title={Measuring nominal scale agreement among many raters},
+  author={Fleiss, Joseph L.},
+  journal={Psychological Bulletin},
+  volume={76},
+  number={5},
+  pages={378--382},
+  year={1971},
+  publisher={American Psychological Association}
 }
 
 @article{brown2001interval,
